--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -164,7 +164,27 @@
     "update_visited_regions": "Mettre à jour les régions visitées",
     "update_visited_regions_disclaimer": "Cela peut prendre un certain temps en fonction du nombre d'aventures que vous avez visitées.",
     "visited_region_check": "Vérification de la région visitée",
-    "visited_region_check_desc": "En sélectionnant cette option, le serveur vérifiera toutes vos aventures visitées et marquera les régions dans lesquelles elles se trouvent comme visitées lors des voyages dans le monde."
+    "visited_region_check_desc": "En sélectionnant cette option, le serveur vérifiera toutes vos aventures visitées et marquera les régions dans lesquelles elles se trouvent comme visitées lors des voyages dans le monde.",
+    "add_new": "Ajouter un nouveau...",
+    "checklists": "Listes de contrôle",
+    "collection_archived": "Cette collection a été archivée.",
+    "collection_completed": "Vous avez terminé cette collection !",
+    "collection_stats": "Statistiques de collecte",
+    "days": "jours",
+    "itineary_by_date": "Itinéraire par date",
+    "keep_exploring": "Continuez à explorer !",
+    "link_new": "Lien Nouveau...",
+    "linked_adventures": "Aventures liées",
+    "links": "Links",
+    "no_end_date": "Veuillez saisir une date de fin",
+    "note": "Note",
+    "notes": "Remarques",
+    "nothing_planned": "Rien de prévu pour cette journée. \nBon voyage !",
+    "transportation": "Transport",
+    "transportations": "Transports",
+    "visit_link": "Visitez le lien",
+    "checklist": "Liste de contrôle",
+    "day": "Jour"
   },
   "home": {
     "desc_1": "Découvrez, planifiez et explorez en toute simplicité",
@@ -189,7 +209,6 @@
     "greeting": "Salut",
     "logout": "Déconnexion",
     "map": "Carte",
-    "my_activities": "Mes activités",
     "my_adventures": "Mes aventures",
     "profile": "Profil",
     "search": "Recherche",
@@ -261,5 +280,77 @@
     "reset_password": "Réinitialiser le mot de passe",
     "submit": "Soumettre",
     "token_required": "Le jeton et l'UID sont requis pour la réinitialisation du mot de passe."
+  },
+  "checklist": {
+    "add_item": "Ajouter un article",
+    "checklist_delete_error": "Erreur lors de la suppression de la liste de contrôle",
+    "checklist_deleted": "Liste de contrôle supprimée avec succès !",
+    "checklist_editor": "Éditeur de liste de contrôle",
+    "checklist_public": "Cette liste de contrôle est publique car elle fait partie d’une collection publique.",
+    "editing_checklist": "Liste de contrôle d'édition",
+    "failed_to_save": "Échec de l'enregistrement de la liste de contrôle",
+    "item": "Article",
+    "item_already_exists": "L'article existe déjà",
+    "item_cannot_be_empty": "L'élément ne peut pas être vide",
+    "items": "Articles",
+    "new_item": "Nouvel article",
+    "save": "Sauvegarder"
+  },
+  "collection": {
+    "collection_created": "Collection créée avec succès !",
+    "collection_edit_success": "Collection modifiée avec succès !",
+    "create": "Créer",
+    "edit_collection": "Modifier la collection",
+    "error_creating_collection": "Erreur lors de la création de la collection",
+    "error_editing_collection": "Erreur lors de la modification de la collection",
+    "new_collection": "Nouvelle collection"
+  },
+  "notes": {
+    "add_a_link": "Ajouter un lien",
+    "content": "Contenu",
+    "editing_note": "Note d'édition",
+    "failed_to_save": "Échec de l'enregistrement de la note",
+    "note_delete_error": "Erreur lors de la suppression de la note",
+    "note_deleted": "Note supprimée avec succès !",
+    "note_editor": "Éditeur de notes",
+    "note_public": "Cette note est publique car elle fait partie d'une collection publique.",
+    "open": "Ouvrir",
+    "save": "Sauvegarder",
+    "invalid_url": "URL invalide"
+  },
+  "transportation": {
+    "date_time": "Date de début",
+    "edit": "Modifier",
+    "edit_transportation": "Modifier le transport",
+    "end_date_time": "Date de fin",
+    "error_editing_transportation": "Erreur lors de la modification du transport",
+    "flight_number": "Numéro du vol",
+    "from_location": "De l'emplacement",
+    "modes": {
+      "bike": "Vélo",
+      "boat": "Bateau",
+      "bus": "Bus",
+      "car": "Voiture",
+      "other": "Autre",
+      "plane": "Avion",
+      "train": "Former",
+      "walking": "Marche"
+    },
+    "new_transportation": "Nouveau transport",
+    "provide_start_date": "Veuillez fournir une date de début",
+    "start": "Commencer",
+    "to_location": "Vers l'emplacement",
+    "transport_type": "Type de transport",
+    "type": "Taper",
+    "date_and_time": "Date",
+    "transportation_added": "Transport ajouté avec succès !",
+    "transportation_delete_error": "Erreur lors de la suppression du transport",
+    "transportation_deleted": "Transport supprimé avec succès !",
+    "transportation_edit_success": "Transport modifié avec succès !"
+  },
+  "search": {
+    "adventurelog_results": "Résultats du journal d'aventure",
+    "online_results": "Résultats en ligne",
+    "public_adventures": "Aventures publiques"
   }
 }
