--- a/frontend/src/locales/nl.json
+++ b/frontend/src/locales/nl.json
@@ -163,7 +163,28 @@
     "update_visited_regions": "Update bezochte regio's",
     "update_visited_regions_disclaimer": "Dit kan even duren, afhankelijk van het aantal avonturen dat je hebt bezocht.",
     "visited_region_check": "Regiocheck bezocht",
-    "visited_region_check_desc": "Door dit te selecteren, controleert de server al uw bezochte avonturen en markeert de regio's waarin ze zich bevinden als bezocht in de wereldreizen."
+    "visited_region_check_desc": "Door dit te selecteren, controleert de server al uw bezochte avonturen en markeert de regio's waarin ze zich bevinden als bezocht in de wereldreizen.",
+    "add_new": "Nieuw toevoegen...",
+    "checklist": "Controlelijst",
+    "checklists": "Controlelijsten",
+    "collection_archived": "Deze collectie is gearchiveerd.",
+    "collection_completed": "Je hebt deze verzameling voltooid!",
+    "collection_stats": "Verzamelstatistieken",
+    "days": "dagen",
+    "itineary_by_date": "Reisplan op datum",
+    "keep_exploring": "Blijf verkennen!",
+    "link_new": "Nieuwe link...",
+    "linked_adventures": "Gekoppelde avonturen",
+    "links": "Koppelingen",
+    "mark_region_as_visited": "Regio {regio}, {country} markeren als bezocht?",
+    "no_end_date": "Voer een einddatum in",
+    "note": "Opmerking",
+    "notes": "Opmerkingen",
+    "nothing_planned": "Niets gepland voor deze dag. \nGeniet van de reis!",
+    "transportation": "Vervoer",
+    "transportations": "Transporten",
+    "visit_link": "Bezoek Link",
+    "day": "Dag"
   },
   "home": {
     "desc_1": "Ontdek, plan en verken met gemak",
@@ -188,7 +209,6 @@
     "greeting": "Hoi",
     "logout": "Uitloggen",
     "map": "Kaart",
-    "my_activities": "Mijn activiteiten",
     "my_adventures": "Mijn avonturen",
     "profile": "Profiel",
     "search": "Zoekopdracht",
@@ -260,5 +280,77 @@
     "reset_password": "Wachtwoord opnieuw instellen",
     "submit": "Indienen",
     "token_required": "Token en UID zijn vereist voor het opnieuw instellen van het wachtwoord."
+  },
+  "checklist": {
+    "add_item": "Artikel toevoegen",
+    "checklist_delete_error": "Fout bij verwijderen van checklist",
+    "checklist_deleted": "Controlelijst succesvol verwijderd!",
+    "checklist_editor": "Controlelijst-editor",
+    "checklist_public": "Deze checklist is openbaar omdat deze zich in een openbare collectie bevindt.",
+    "editing_checklist": "Controlelijst bewerken",
+    "failed_to_save": "Kan checklist niet opslaan",
+    "item": "Item",
+    "item_already_exists": "Artikel bestaat al",
+    "item_cannot_be_empty": "Artikel mag niet leeg zijn",
+    "items": "Artikelen",
+    "new_item": "Nieuw artikel",
+    "save": "Redden"
+  },
+  "collection": {
+    "collection_created": "Collectie succesvol aangemaakt!",
+    "collection_edit_success": "Collectie succesvol bewerkt!",
+    "create": "Creëren",
+    "edit_collection": "Verzameling bewerken",
+    "error_creating_collection": "Fout bij maken collectie",
+    "error_editing_collection": "Fout bij bewerken collectie",
+    "new_collection": "Nieuwe collectie"
+  },
+  "notes": {
+    "add_a_link": "Voeg een link toe",
+    "content": "Inhoud",
+    "editing_note": "Notitie bewerken",
+    "failed_to_save": "Kan notitie niet opslaan",
+    "note_delete_error": "Fout bij verwijderen van notitie",
+    "note_deleted": "Opmerking succesvol verwijderd!",
+    "note_editor": "Notitie-editor",
+    "note_public": "Deze notitie is openbaar omdat deze zich in een openbare collectie bevindt.",
+    "open": "Open",
+    "save": "Redden",
+    "invalid_url": "Ongeldige URL"
+  },
+  "transportation": {
+    "date_and_time": "Datum",
+    "date_time": "Startdatum",
+    "edit": "Bewerking",
+    "edit_transportation": "Transport bewerken",
+    "end_date_time": "Einddatum",
+    "error_editing_transportation": "Fout bij bewerken van transport",
+    "flight_number": "Vluchtnummer",
+    "from_location": "Van locatie",
+    "modes": {
+      "bike": "Fiets",
+      "boat": "Boot",
+      "train": "Trein",
+      "bus": "Bus",
+      "car": "Auto",
+      "other": "Ander",
+      "plane": "Vliegtuig",
+      "walking": "Lopen"
+    },
+    "to_location": "Naar locatie",
+    "transportation_edit_success": "Transport succesvol bewerkt!",
+    "type": "Type",
+    "new_transportation": "Nieuw transport",
+    "provide_start_date": "Geef een startdatum op",
+    "start": "Begin",
+    "transport_type": "Transporttype",
+    "transportation_added": "Transport succesvol toegevoegd!",
+    "transportation_delete_error": "Fout bij verwijderen transport",
+    "transportation_deleted": "Transport succesvol verwijderd!"
+  },
+  "search": {
+    "adventurelog_results": "AdventureLog-resultaten",
+    "online_results": "Online resultaten",
+    "public_adventures": "Openbare avonturen"
   }
 }
