--- a/frontend/src/locales/sv.json
+++ b/frontend/src/locales/sv.json
@@ -164,7 +164,27 @@
     "update_visited_regions_disclaimer": "Detta kan ta ett tag beroende på antalet äventyr du har besökt.",
     "visited_region_check": "Besökte Region Check",
     "visited_region_check_desc": "Genom att välja detta kommer servern att kontrollera alla dina besökta äventyr och markera de regioner de befinner sig i som besökta i världsresor.",
-    "wikipedia": "Wikipedia"
+    "wikipedia": "Wikipedia",
+    "add_new": "Lägg till ny...",
+    "checklist": "Checklista",
+    "checklists": "Checklistor",
+    "collection_archived": "Denna samling har arkiverats.",
+    "collection_completed": "Du har slutfört den här samlingen!",
+    "collection_stats": "Insamlingsstatistik",
+    "days": "dagar",
+    "itineary_by_date": "Resplan efter datum",
+    "keep_exploring": "Fortsätt utforska!",
+    "link_new": "Länk Ny...",
+    "linked_adventures": "Länkade äventyr",
+    "links": "Länkar",
+    "no_end_date": "Ange ett slutdatum",
+    "note": "Notera",
+    "notes": "Anteckningar",
+    "nothing_planned": "Inget planerat för denna dag. \nNjut av resan!",
+    "transportation": "Transport",
+    "transportations": "Transporter",
+    "visit_link": "Besök länken",
+    "day": "Dag"
   },
   "home": {
     "desc_1": "Upptäck, planera och utforska med lätthet",
@@ -189,7 +209,6 @@
     "greeting": "Hej",
     "logout": "Utloggning",
     "map": "Karta",
-    "my_activities": "Mina aktiviteter",
     "my_adventures": "Mina äventyr",
     "profile": "Profil",
     "search": "Söka",
@@ -261,5 +280,77 @@
     "reset_password": "Återställ lösenord",
     "submit": "Överlämna",
     "token_required": "Token och UID krävs för lösenordsåterställning."
+  },
+  "checklist": {
+    "add_item": "Lägg till objekt",
+    "checklist_delete_error": "Fel vid borttagning av checklista",
+    "checklist_deleted": "Checklistan har raderats!",
+    "checklist_editor": "Checklista Editor",
+    "checklist_public": "Den här checklistan är offentlig eftersom den finns i en offentlig samling.",
+    "editing_checklist": "Redigeringschecklista",
+    "failed_to_save": "Det gick inte att spara checklistan",
+    "item": "Punkt",
+    "item_already_exists": "Objektet finns redan",
+    "item_cannot_be_empty": "Objektet får inte vara tomt",
+    "items": "Föremål",
+    "new_item": "Nytt föremål",
+    "save": "Spara"
+  },
+  "collection": {
+    "collection_created": "Samlingen har skapats!",
+    "collection_edit_success": "Samlingen har redigerats!",
+    "create": "Skapa",
+    "edit_collection": "Redigera samling",
+    "error_creating_collection": "Det gick inte att skapa samlingen",
+    "error_editing_collection": "Fel vid redigering av samling",
+    "new_collection": "Ny samling"
+  },
+  "notes": {
+    "add_a_link": "Lägg till en länk",
+    "content": "Innehåll",
+    "editing_note": "Redigeringsanteckning",
+    "failed_to_save": "Det gick inte att spara anteckningen",
+    "note_delete_error": "Det gick inte att ta bort anteckningen",
+    "note_deleted": "Anteckningen har raderats!",
+    "note_editor": "Note Editor",
+    "note_public": "Den här anteckningen är offentlig eftersom den finns i en offentlig samling.",
+    "open": "Öppna",
+    "save": "Spara",
+    "invalid_url": "Ogiltig URL"
+  },
+  "transportation": {
+    "date_and_time": "Datum",
+    "date_time": "Startdatum",
+    "edit": "Redigera",
+    "edit_transportation": "Redigera transport",
+    "end_date_time": "Slutdatum",
+    "error_editing_transportation": "Fel vid redigering av transport",
+    "flight_number": "Flygnummer",
+    "from_location": "Från plats",
+    "modes": {
+      "bike": "Cykel",
+      "boat": "Båt",
+      "bus": "Buss",
+      "car": "Bil",
+      "other": "Andra",
+      "plane": "Plan",
+      "train": "Tåg",
+      "walking": "Gående"
+    },
+    "new_transportation": "Nya transporter",
+    "provide_start_date": "Ange ett startdatum",
+    "start": "Start",
+    "to_location": "Till Plats",
+    "transport_type": "Transporttyp",
+    "transportation_added": "Transport har lagts till!",
+    "transportation_delete_error": "Det gick inte att ta bort transport",
+    "transportation_deleted": "Transporten har raderats!",
+    "transportation_edit_success": "Transporten har redigerats!",
+    "type": "Typ"
+  },
+  "search": {
+    "adventurelog_results": "AdventureLog-resultat",
+    "online_results": "Online resultat",
+    "public_adventures": "Offentliga äventyr"
   }
 }
