--- a/frontend/src/locales/zh.json
+++ b/frontend/src/locales/zh.json
@@ -164,7 +164,27 @@
     "update_visited_regions": "更新访问过的地区",
     "update_visited_regions_disclaimer": "这可能需要一段时间，具体取决于您访问过的冒险活动的数量。",
     "visited_region_check": "访问地区检查",
-    "visited_region_check_desc": "通过选择此选项，服务器将检查您访问过的所有冒险活动，并将它们所在的区域标记为在世界旅行中访问过的区域。"
+    "visited_region_check_desc": "通过选择此选项，服务器将检查您访问过的所有冒险活动，并将它们所在的区域标记为在世界旅行中访问过的区域。",
+    "add_new": "添加新...",
+    "checklist": "清单",
+    "checklists": "清单",
+    "collection_archived": "该藏品已存档。",
+    "collection_completed": "您已经完成了这个合集！",
+    "collection_stats": "集合统计",
+    "days": "天",
+    "itineary_by_date": "行程（按日期）",
+    "keep_exploring": "继续探索！",
+    "link_new": "链接新...",
+    "linked_adventures": "关联的冒险",
+    "links": "链接",
+    "no_end_date": "请输入结束日期",
+    "note": "笔记",
+    "notes": "笔记",
+    "nothing_planned": "这一天没有什么计划。\n祝旅途愉快！",
+    "transportation": "运输",
+    "transportations": "交通",
+    "visit_link": "访问链接",
+    "day": "天"
   },
   "home": {
     "desc_1": "轻松发现、规划和探索",
@@ -189,7 +209,6 @@
     "greeting": "你好",
     "logout": "退出",
     "map": "地图",
-    "my_activities": "我的活动",
     "my_adventures": "我的冒险",
     "profile": "轮廓",
     "search": "搜索",
@@ -261,5 +280,77 @@
     "reset_password": "重置密码",
     "submit": "提交",
     "token_required": "重置密码需要令牌和 UID。"
+  },
+  "checklist": {
+    "add_item": "添加项目",
+    "checklist_delete_error": "删除清单时出错",
+    "checklist_deleted": "清单删除成功！",
+    "checklist_editor": "清单编辑器",
+    "checklist_public": "该清单是公开的，因为它属于公共收藏。",
+    "editing_checklist": "编辑清单",
+    "failed_to_save": "保存清单失败",
+    "item": "物品",
+    "item_already_exists": "项目已存在",
+    "item_cannot_be_empty": "项目不能为空",
+    "items": "项目",
+    "new_item": "新商品",
+    "save": "节省"
+  },
+  "collection": {
+    "collection_created": "收藏创建成功！",
+    "collection_edit_success": "合集编辑成功！",
+    "create": "创造",
+    "edit_collection": "编辑收藏",
+    "error_creating_collection": "创建集合时出错",
+    "error_editing_collection": "编辑集合时出错",
+    "new_collection": "新系列"
+  },
+  "notes": {
+    "add_a_link": "添加链接",
+    "content": "内容",
+    "editing_note": "编辑注释",
+    "failed_to_save": "保存笔记失败",
+    "note_delete_error": "删除笔记时出错",
+    "note_deleted": "备注删除成功！",
+    "note_editor": "笔记编辑器",
+    "note_public": "该笔记是公开的，因为它属于公共收藏。",
+    "open": "打开",
+    "save": "节省",
+    "invalid_url": "无效网址"
+  },
+  "transportation": {
+    "date_and_time": "日期",
+    "date_time": "开始日期",
+    "edit": "编辑",
+    "edit_transportation": "编辑交通",
+    "end_date_time": "结束日期",
+    "error_editing_transportation": "编辑交通时出错",
+    "flight_number": "航班",
+    "from_location": "出发地点",
+    "modes": {
+      "bike": "自行车",
+      "boat": "船",
+      "bus": "公共汽车",
+      "car": "车",
+      "other": "其他",
+      "plane": "飞机",
+      "train": "火车",
+      "walking": "步行"
+    },
+    "new_transportation": "新交通",
+    "provide_start_date": "请提供开始日期",
+    "start": "开始",
+    "to_location": "前往地点",
+    "transport_type": "运输类型",
+    "transportation_added": "交通添加成功！",
+    "transportation_delete_error": "删除交通时出错",
+    "transportation_deleted": "交通删除成功！",
+    "transportation_edit_success": "交通编辑成功！",
+    "type": "类型"
+  },
+  "search": {
+    "adventurelog_results": "冒险日志结果",
+    "online_results": "在线结果",
+    "public_adventures": "公共冒险"
   }
 }
