--- a/frontend/src/locales/it.json
+++ b/frontend/src/locales/it.json
@@ -164,7 +164,27 @@
     "update_visited_regions": "Aggiorna le regioni visitate",
     "update_visited_regions_disclaimer": "L'operazione potrebbe richiedere del tempo a seconda del numero di avventure che hai visitato.",
     "visited_region_check": "Controllo della regione visitata",
-    "visited_region_check_desc": "Selezionando questa opzione, il server controllerà tutte le avventure che hai visitato e contrassegnerà le regioni in cui si trovano come visitate nei viaggi per il mondo."
+    "visited_region_check_desc": "Selezionando questa opzione, il server controllerà tutte le avventure che hai visitato e contrassegnerà le regioni in cui si trovano come visitate nei viaggi per il mondo.",
+    "add_new": "Aggiungi nuovo...",
+    "checklist": "Lista di controllo",
+    "checklists": "Liste di controllo",
+    "collection_archived": "Questa raccolta è stata archiviata.",
+    "collection_completed": "Hai completato questa raccolta!",
+    "collection_stats": "Statistiche della raccolta",
+    "days": "giorni",
+    "itineary_by_date": "Itinerario per data",
+    "keep_exploring": "Continua a esplorare!",
+    "link_new": "Collegamento Nuovo...",
+    "linked_adventures": "Avventure collegate",
+    "links": "Collegamenti",
+    "no_end_date": "Inserisci una data di fine",
+    "note": "Nota",
+    "notes": "Note",
+    "nothing_planned": "Niente in programma per questa giornata. \nBuon viaggio!",
+    "transportation": "Trasporti",
+    "transportations": "Trasporti",
+    "visit_link": "Visita il collegamento",
+    "day": "Giorno"
   },
   "home": {
     "desc_1": "Scopri, pianifica ed esplora con facilità",
@@ -189,7 +209,6 @@
     "greeting": "CIAO",
     "logout": "Esci",
     "map": "Mappa",
-    "my_activities": "Le mie attività",
     "my_adventures": "Le mie avventure",
     "profile": "Profilo",
     "search": "Ricerca",
@@ -261,5 +280,77 @@
     "reset_password": "Reimposta password",
     "submit": "Invia",
     "token_required": "Token e UID sono necessari per la reimpostazione della password."
+  },
+  "checklist": {
+    "add_item": "Aggiungi articolo",
+    "checklist_delete_error": "Errore durante l'eliminazione della lista di controllo",
+    "checklist_deleted": "Lista di controllo eliminata con successo!",
+    "checklist_editor": "Redattore della lista di controllo",
+    "checklist_public": "Questa lista di controllo è pubblica perché è in una raccolta pubblica.",
+    "editing_checklist": "Lista di controllo per la modifica",
+    "failed_to_save": "Impossibile salvare la lista di controllo",
+    "item": "Articolo",
+    "item_already_exists": "L'articolo esiste già",
+    "item_cannot_be_empty": "L'articolo non può essere vuoto",
+    "items": "Elementi",
+    "save": "Salva",
+    "new_item": "Nuovo articolo"
+  },
+  "collection": {
+    "edit_collection": "Modifica raccolta",
+    "error_creating_collection": "Errore durante la creazione della raccolta",
+    "error_editing_collection": "Errore durante la modifica della raccolta",
+    "new_collection": "Nuova collezione",
+    "collection_created": "Collezione creata con successo!",
+    "collection_edit_success": "Raccolta modificata con successo!",
+    "create": "Creare"
+  },
+  "notes": {
+    "add_a_link": "Aggiungi un collegamento",
+    "content": "Contenuto",
+    "editing_note": "Nota di modifica",
+    "failed_to_save": "Impossibile salvare la nota",
+    "note_delete_error": "Errore durante l'eliminazione della nota",
+    "note_deleted": "Nota eliminata con successo!",
+    "note_editor": "Redattore della nota",
+    "note_public": "Questa nota è pubblica perché è in una collezione pubblica.",
+    "open": "Aprire",
+    "save": "Salva",
+    "invalid_url": "URL non valido"
+  },
+  "transportation": {
+    "date_and_time": "Data",
+    "date_time": "Data di inizio",
+    "edit": "Modificare",
+    "edit_transportation": "Modifica Trasporti",
+    "end_date_time": "Data di fine",
+    "error_editing_transportation": "Errore durante la modifica del trasporto",
+    "flight_number": "Numero del volo",
+    "from_location": "Dalla posizione",
+    "modes": {
+      "bike": "Bicicletta",
+      "boat": "Barca",
+      "bus": "Autobus",
+      "car": "Auto",
+      "other": "Altro",
+      "plane": "Aereo",
+      "train": "Treno",
+      "walking": "A piedi"
+    },
+    "new_transportation": "Nuovi trasporti",
+    "provide_start_date": "Si prega di fornire una data di inizio",
+    "start": "Inizio",
+    "to_location": "Alla posizione",
+    "transport_type": "Tipo di trasporto",
+    "transportation_added": "Trasporto aggiunto con successo!",
+    "transportation_delete_error": "Errore durante l'eliminazione del trasporto",
+    "transportation_deleted": "Trasporto eliminato con successo!",
+    "transportation_edit_success": "Trasporti modificati con successo!",
+    "type": "Tipo"
+  },
+  "search": {
+    "adventurelog_results": "Risultati di AdventureLog",
+    "online_results": "Risultati in linea",
+    "public_adventures": "Avventure pubbliche"
   }
 }
